# BambuStudio

./: .dockerignore  .gitignore  DOCKER_QUICKSTART.md  Dockerfile.lambda  Dockerfile.service  base64_decoder.py  docker-compose.yml
rust_bindings/: QUICKSTART.md  README.md
rust_bindings/c_api/: CMakeLists.txt  slicer_c_api.cpp  slicer_c_api.h
rust_bindings/rust/bambu-slicer/: Cargo.toml  OverrideConfigs.md  README.md  build.rs
rust_bindings/rust/bambu-slicer/examples/: slice_model.rs
rust_bindings/rust/bambu-slicer/src/: error.rs  ffi.rs  lib.rs
slicer_lambda/: Cargo.toml  README.md
slicer_lambda/src/: event_handler.rs
slicer_service/: Cargo.toml  README.md
slicer_service/examples/: client.py  test.sh
slicer_service/src/: main.rs
src/libslic3r/: CMakeLists.txt  Print.cpp
test_slicer/: .gitignore  Cargo.toml  README.md
test_slicer/models/: README.md
test_slicer/output/: README.md
test_slicer/src/: main.rs
